--- a/src/app/components/grafico-dona/grafico-dona.component.html
+++ b/src/app/components/grafico-dona/grafico-dona.component.html
@@ -1,3 +1,4 @@
-<p>
-  grafico-dona works!
-</p>
+<div style="display: block">
+  <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType">
+  </canvas>
+</div>
